@@ -322,6 +322,8 @@ Browser=false
 #LocaleFile=@EXPANDED_LOCALEDIR@/locale.alias
 # Logo shown in the standard greeter
 #Logo=@EXPANDED_PIXMAPDIR@/gdm-foot-logo.png
+# Logo shown on file chooser button in gdmsetup. (Do not modify.)
+#ChooserButtonLogo=@EXPANDED_PIXMAPDIR@/gdm-foot-logo.png
 # The standard greeter should shake if a user entered the wrong username or
 # password.  Kind of cool looking
 #Quiver=true
@@ -363,7 +365,7 @@ DefaultRemoteWelcome=true
 # multihead, currently only works for Xinerama.
 #XineramaScreen=0
 # Background settings for the standard greeter:
-# Type can be 0=None, 1=Image, 2=Color
+# Type can be 0=None, 1=Image & Color, 2=Color, 3=Image
 #BackgroundType=2
 #BackgroundImage=
 #BackgroundScaleToFit=true
@@ -403,6 +405,7 @@ DefaultRemoteWelcome=true
 #GraphicalThemes=circles/:happygnome
 GraphicalThemeDir=@EXPANDED_DATADIR@/gdm/themes/
 GraphicalThemeRand=false
+GraphicalThemedColor=#76848F
 # If InfoMsgFile points to a file, the greeter will display the contents of the
 # file in a modal dialog box before the user is allowed to log in.
 #InfoMsgFile=
