@@ -1,3 +1,13 @@
+2005-11-03  Brian Cameron  <brian.cameron@sun.com>
+
+	* config/gdm.conf: Updated UPDATE_CONFIG section
+	  of docs to reflect changes made to GDM configuration.
+
+2005-11-03  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* config/gdm.conf.in: Updates for bug #314685.
+	* docs/C/gdm.xml: Updates for bug #314685.
+
 2005-11-03  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	* gui/gdmsetup.desktop.in:  Update Name, GenericName & Comment
